Minecraft 1.12.2 support (#23)
* Runnable 1.12.2 vanilla client&server

* Working 1.12.2 generateForgeSrgMappings

* Start work on 1.12 deobfuscation

* Shade fg12 and fg23 libraries separately and speed up shadow jar assembly

* Deobf & decomp for 1.12

* 1.12 cleanupDecompSrgJar

* 8 failing forge patches remain

* Fix cleanup mismatch between fg1.2 and fg2.3, now everything up to `patchDecompiledJar` works

* Working 1.12 running with mod and reobfuscation!

* Fix tests and non-optional patches inject directory.

* Update to gradle 8.1.1, enable parallel builds in the plugin subbuild